fix header, main, body spacing

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,29 @@
+/* Background image*/
+html {
+    background: url(./images/budgeting-80-opacity.png) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
+}
+
+/* Body */
+body {
+    min-height: 100vh;
+    margin: 0px;
+}
+
+main {
+    display: flex;
+    align-items: center;
+    height: 75vh;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+main>h1 {
+    width: 100%;
+}
 /* Links styling */
 a:link {
     text-decoration: none;
@@ -10,53 +36,68 @@ a:visited {
 }
 
 a:hover {
-    color: black;
+    color: #644f3e;
+    font-weight: bold;
 }
 
 #home {
     font-family: Sacramento, normal;
     font-size: 5em;
     font-weight: bold;
-    
+    padding: 0px 20px;
+}
+
+ul li {
+    display: inline;
+    padding: 20px;
+    font-family: Noto Sans JP;
+    font-size: 1.25em;
+}
+
+.top-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .nav-links {
-    font-family: Noto Sans JP;
+    justify-self: flex-end;
 }
-
-a.nav-links {
-    padding: 0px 10px;
-}
-
 
 /* Hero section */
-.hero {
+main {
     position: relative;
     text-align: center;
     font-family: Noto Sans JP;
-    color:#846851;
+    color: #745c47;
 }
 
 h1 {
     font-size: 4.5em;
 }
 
-#button {
+button {
     background-color: transparent;
     font-family: Noto Sans JP;
     font-weight: bold;
     font-size: 1.5em;
-    color:#846851;
+    color: #846851;
     padding: 15px 32px;
-    border-color: #846851;
+    border: #846851 solid 3.5px;
     text-align: center;
 }
 
-/* Background image*/
-html {
-    background: url(./images/budgeting.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+button:hover {
+    background-color: #846851;
+    color: white;
+}
+
+/* Footer */
+footer {
+    padding: 20px;
+    font-family: Noto Sans JP;
+}
+
+footer>p {
+    text-align: center;
 }
